# Real-time-messenger-backend

./: .gitignore  README.md
.github/workflows/: tests.yml
backend/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
backend/.github/workflows/: tests.yml
backend/app/: database.py  main.py
backend/app/core/: config.py  security.py
backend/app/dependencies/: auth.py  websocket_auth.py
backend/app/models/: __init__.py  base.py  chat.py  chat_reads.py  message.py  participant.py  user.py
backend/app/rabbit/: manager.py  startup.py
backend/app/rabbit/consumers/: chat_read.py  message_created.py
backend/app/redis/: __init__.py  manager.py  redis_subscriber.py
backend/app/routers/: auth.py  chat.py  messages.py  users.py  websocket.py
backend/app/schemas/: chat.py  message.py  token.py  user.py
backend/app/services/: auth_service.py  chat_read_service.py  chat_service.py  chat_services.py  delivery_service.py  message_service.py  read_service.py
backend/app/utils/: json_encoder.py
backend/app/websocket/: manager.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_router.py  test_chat_router.py  test_message_router.py  test_user_router.py  test_websocket_router.py
backend/tests/services/: test_auth_service.py  test_chat_service.py  test_message_service.py
backend/tests/unit/: test_message_service.py  test_websocket_manager.py
frontend/: auth.html  chat.html  index.html  register.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  chat.js  ws.js
